tests/sksl/errors/SwizzleMatrix.glsl
### Compilation failed:

error: 3: type 'float2x2' does not have a field named 'y'
    float y = x.y;
              ^^^
1 error
